java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/Incorrect implicit class name with spaces.java
<error descr="The name of a compact source file is not a valid identifier">void main() {}</error>